--- a/package.json
+++ b/package.json
@@ -12,31 +12,16 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.1.4",
-    "animate.css": "^3.5.2",
-    "animsition": "^4.0.2",
     "body-parser": "^1.18.2",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^4.0.0-beta.2",
     "cors": "^2.8.4",
-    "countdown": "^2.6.0",
-    "counterup": "^1.0.2",
-    "easingjs": "^1.0.1",
     "email-validator": "^1.1.1",
+    "express": "^4.14.1",
     "font-awesome": "^4.7.0",
-    "html-loader": "^0.5.1",
-    "ionicons": "^3.0.0",
-    "jquery": "^2.1.1",
-    "jquery-validation": "^1.17.0",
-    "jquery.easing": "^1.4.1",
-    "owl.carousel": "^2.2.0",
-    "owlcarousel-pre": "^1.3.3",
-    "smoothscroll": "^0.3.0",
-    "tether": "^1.2.4",
     "vue": "^2.4.2",
     "vue-analytics": "^5.1.1",
-    "vue-router": "^2.7.0",
-    "waypoints": "^4.0.1",
-    "wow.js": "^1.2.2",
-    "wowjs": "^1.1.3"
+    "vue-particles": "^1.0.9",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -60,10 +45,10 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "node-sass": "^4.5.3",
@@ -76,7 +61,6 @@
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
-    "vue-particles": "^1.0.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.6.1",
